clusters/home.axe.al/projects/pihole/overlays/test/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  tls:
  - hosts:
    - pihole.test.home.axe.al
    secretName: pihole-tls
  rules:
  - host: pihole.test.home.axe.al
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              number: 80
